--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,8 +5,8 @@
 {% block content %}
 <div class="row mb-4">
     <div class="col-12">
-        <h1 class="mb-0">Dashboard</h1>
-        <p class="text-muted">Overview of your taskforce management system</p>
+        <h1 class="mb-0" , style="color: white;">Dashboard</h1>
+        <p , style="color: white;">Overview of your taskforce management system</p>
     </div>
 </div>
 
