--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,9 +26,9 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../img/background.png');
+    background-image: url('../img/RobloxScreenShot20251129_132653842.png');
     background-size: cover;
     background-position: center;
-    filter: blur(8px) brightness(0.4);
+    filter: blur(3px) brightness(0.4);
     z-index: -1;
 }
