--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -66,9 +66,22 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card bg-warning text-dark p-3">
-                    <h5>Exports</h5>
-                    <p class="mb-0">XLSX</p>
+                <div class="card bg-dark text-white p-3 border-secondary">
+                    <h5>Roblox</h5>
+                    {% set sync_enabled = config['ROBLOX_SYNC_ENABLED'] %}
+                    {% set has_cookie = config['ROBLOX_COOKIE'] %}
+
+                    {% if sync_enabled and has_cookie %}
+                    <p class="mb-0 text-success"><i class="fas fa-link me-1"></i>Connected</p>
+                    {% elif sync_enabled and not has_cookie %}
+                    <p class="mb-0 text-danger"><i class="fas fa-unlink me-1"></i>Missing Cookie</p>
+                    {% else %}
+                    <p class="mb-0 text-secondary"><i class="fas fa-pause-circle me-1"></i>Disabled</p>
+                    {% endif %}
+
+                    <a href="{{ url_for('update_cookie') }}" class="btn btn-outline-light btn-sm mt-2">
+                        <i class="fas fa-key me-1"></i> Update
+                    </a>
                 </div>
             </div>
         </div>
