--- a/templates/update_cookie.html
+++ b/templates/update_cookie.html
@@ -33,7 +33,7 @@
                                 placeholder="_|WARNING:-DO-NOT-SHARE-THIS.--Sharing-this-will-allow-someone-to-log-in-as-you-and-to-steal-your-ROBUX-and-items.|_..."></textarea>
                         </div>
                         <div class="d-flex justify-content-between">
-                            <a href="{{ url_for('dashboard') }}" class="btn btn-secondary">Cancel</a>
+                            <a href="{{ url_for('members.dashboard') }}" class="btn btn-secondary">Cancel</a>
                             <button type="submit" class="btn btn-primary">Update Cookie</button>
                         </div>
                     </form>
