--- a/templates/ac/ac_dashboard.html
+++ b/templates/ac/ac_dashboard.html
@@ -18,27 +18,27 @@
         <a href="{{ url_for('log_activity') }}" class="btn btn-outline-primary me-2">
             <i class="fas fa-plus me-1"></i>Log Activity
         </a>
-        <a href="{{ url_for('quick_log') }}" class="btn btn-outline-success me-2">
+        <a href="{{ url_for('ac.quick_log') }}" class="btn btn-outline-success me-2">
             <i class="fas fa-bolt me-1"></i>Quick Log
         </a>
         {% if current_period %}
-        <a href="{{ url_for('title_rewards') }}" class="btn btn-outline-warning me-2" title="View title rewards">
+        <a href="{{ url_for('ac.title_rewards') }}" class="btn btn-outline-warning me-2" title="View title rewards">
             <i class="fas fa-trophy me-1"></i>Title Rewards
         </a>
-        <a href="{{ url_for('edit_ac_period') }}" class="btn btn-outline-info me-2" title="Edit period name">
+        <a href="{{ url_for('ac.edit_ac_period') }}" class="btn btn-outline-info me-2" title="Edit period name">
             <i class="fas fa-edit me-1"></i>Edit Period
         </a>
-        <form action="{{ url_for('clear_all_activities') }}" method="post" class="d-inline-block me-2"
+        <form action="{{ url_for('ac.clear_all_activities') }}" method="post" class="d-inline-block me-2"
             onsubmit="return confirm('Are you sure you want to clear ALL activities for ALL members in this period? This cannot be undone!');">
             <button class="btn btn-outline-danger" type="submit" title="Clear all activities">
                 <i class="fas fa-trash-alt me-1"></i>Clear All
             </button>
         </form>
         {% endif %}
-        <a href="{{ url_for('export_ac_excel') }}" class="btn btn-dark me-2">
+        <a href="{{ url_for('ac.export_ac_excel') }}" class="btn btn-dark me-2">
             <i class="fas fa-file-excel me-1"></i>Export AC (Download)
         </a>
-        <form action="{{ url_for('export_ac_excel') }}" method="post" enctype="multipart/form-data"
+        <form action="{{ url_for('ac.export_ac_excel') }}" method="post" enctype="multipart/form-data"
             class="d-inline-block">
             <input type="file" name="workbook" accept=".xlsx" required class="form-control d-inline-block"
                 style="width:220px;display:inline-block" />
@@ -102,7 +102,7 @@
             <div class="card-header bg-warning text-dark">
                 <h5 class="mb-0">
                     <i class="fas fa-trophy me-2"></i>Title Rewards Winners
-                    <a href="{{ url_for('title_rewards') }}" class="btn btn-sm btn-outline-dark float-end">
+                    <a href="{{ url_for('ac.title_rewards') }}" class="btn btn-sm btn-outline-dark float-end">
                         View Details <i class="fas fa-arrow-right ms-1"></i>
                     </a>
                 </h5>
@@ -172,7 +172,7 @@
                     <tr>
                         <td>{{ progress.member.current_rank }}</td>
                         <td>
-                            <a href="{{ url_for('ac_member_detail', member_id=progress.member.id) }}">
+                            <a href="{{ url_for('ac.ac_member_detail', member_id=progress.member.id) }}">
                                 {{ progress.member.discord_username }}
                             </a>
                         </td>
