--- a/templates/ac/edit_period.html
+++ b/templates/ac/edit_period.html
@@ -14,6 +14,6 @@
       period.end_date.strftime('%Y-%m-%d') }}</small>
   </div>
   <button class="btn btn-primary" type="submit">Update Name</button>
-  <a href="{{ url_for('ac_dashboard') }}" class="btn btn-secondary">Cancel</a>
+  <a href="{{ url_for('ac.ac_dashboard') }}" class="btn btn-secondary">Cancel</a>
 </form>
 {% endblock %}
