--- a/templates/base.html
+++ b/templates/base.html
@@ -13,24 +13,24 @@
 <body class="d-flex flex-column min-vh-100">
   <nav class="navbar navbar-expand-lg navbar-dark bg-custom-purple">
     <div class="container">
-      <a class="navbar-brand" href="{{ url_for('public_roster') }}">
+      <a class="navbar-brand" href="{{ url_for('public.public_roster') }}">
         <img src="{{ url_for('static', filename='img/TaskLogo.jpeg') }}" alt="Taskforce Logo" class="navbar-logo">
         Taskforce
       </a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav me-auto">
-          <li class="nav-item"><a class="nav-link" href="{{ url_for('public_roster') }}">Roster</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('public.public_roster') }}">Roster</a></li>
           {% if is_staff %}
-          <li class="nav-item"><a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a></li>
-          <li class="nav-item"><a class="nav-link" href="{{ url_for('members') }}">Manage</a></li>
-          <li class="nav-item"><a class="nav-link" href="{{ url_for('ac_dashboard') }}">AC</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('members.dashboard') }}">Dashboard</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('members.members') }}">Manage</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('ac.ac_dashboard') }}">AC</a></li>
           {% endif %}
         </ul>
         <ul class="navbar-nav">
           {% if is_staff %}
-          <li class="nav-item"><a class="nav-link" href="{{ url_for('staff_logout') }}">Logout</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.staff_logout') }}">Logout</a></li>
           {% else %}
-          <li class="nav-item"><a class="nav-link" href="{{ url_for('staff_login') }}">Staff Login</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.staff_login') }}">Staff Login</a></li>
           {% endif %}
         </ul>
       </div>
