--- a/templates/public_member.html
+++ b/templates/public_member.html
@@ -51,7 +51,7 @@
 
             {% if is_staff %}
             <div class="mt-3">
-                <a href="{{ url_for('member_detail', member_id=member.id) }}" class="btn btn-primary">
+                <a href="{{ url_for('members.member_detail', member_id=member.id) }}" class="btn btn-primary">
                     <i class="fas fa-edit me-1"></i>View Full Profile
                 </a>
             </div>
